# k8s-debugger-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEMO.md  Makefile  README.md  demo_slack.py  pyproject.toml  test_graph_run.py
.claude/: settings.local.json
.eval/: junit.xml  router_confusion.json
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
deploy/: Dockerfile.agent  Dockerfile.mcp  docker-compose.yml
deploy/demo/: 00-namespace.yaml  01-podinfo-v1.yaml  02-podinfo-v2-bad.yaml  03-service.yaml  04-pdb.yaml
deploy/discord_bot/: Dockerfile  bot.py
deploy/mocks/: agent_mock.py  fire_alert.py  k8s_fixtures.py  llm_fixtures.py
deploy/slack_mock/: Dockerfile  app.py
docs/: EVAL.md
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx
gui/src/components/: ApprovalPanel.tsx  EventLog.tsx  PipelineLog.tsx  PodGrid.tsx  ScenarioButtons.tsx  WorkflowDiagram.tsx
gui/src/hooks/: useEventStream.ts  usePods.ts
gui/src/services/: api.ts
gui/src/types/: events.ts
scripts/: check_openrouter.py  eval_report.py  smoke.py
scripts/demo/: deploy.sh  fire-webhook.sh  teardown.sh  trigger-bad-deploy.sh  trigger-crash.sh  trigger-oom.sh  trigger-scale.sh
scripts/graph/: export_langgraph_visualization.py
specs/001-log-triage-classifier/: spec.md
specs/001-log-triage-classifier/checklists/: requirements.md
specs/002-routed-triage-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-routed-triage-workflow/checklists/: requirements.md
specs/002-routed-triage-workflow/contracts/: alertmanager_webhook.md  audit_record.md  mcp_tools.md  slack_mock.md
specs/003-podinfo-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-application-expert/checklists/: requirements.md
specs/006-api-bot-integration/: plan.md
specs/007-network-agent/: plan.md  research.md  spec.md  tasks.md
specs/007-network-agent/checklists/: requirements.md
specs/007-solver-implementation/: spec.md
specs/008-multi-agent-workflow-gui/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/008-multi-agent-workflow-gui/contracts/: gui_approval_api.md  pod_status_api.md  scenario_trigger_api.md  sse_events.md
src/agent/: approval_token.py  audit.py  auth.py  checkpointer.py  db.py  logging_config.py  redaction.py  settings.py  solver_lock.py
src/agent/api/: __init__.py  callbacks.py  expiry.py  health.py  webhook.py
src/agent/api/gui/: __init__.py  approval.py  event_bus.py  inject.py  pods.py  scenarios.py  stream.py
src/agent/graph/: builder.py  state.py
src/agent/graph/nodes/: _placeholders.py  ingest.py  reporter.py  router.py  solver.py
src/agent/graph/nodes/experts/: _base.py  application.py  database.py  network.py
src/mcp_server/: __main__.py  admin.py  auth.py  server.py
src/mcp_server/tools/: _guards.py  delete_pod_to_reschedule.py  get_pod.py  get_pod_events.py  restart_pod.py  rollback_deployment.py  scale_deployment.py  search_pod_logs.py
src/shared/: catalog.py  correlation.py  errors.py  labels.py  schemas.py
tests/: conftest.py  test_callbacks.py  test_expiry_and_replay.py  test_spawn_tracked.py  test_units.py  test_webhook.py
tests/eval/: hallucination_suite.py
tests/eval/experts/: test_diagnosis.py
tests/eval/router/: test_classification.py
tests/integration/: conftest.py  test_demo_scenarios.sh  test_discord_delivery.py  test_graph_run.py  test_llm_connectivity.py
tests/unit/: test_base_expert_allowed_actions.py  test_inverse_actions.py  test_network_expert.py  test_redaction.py  test_solver_guards.py  test_solver_lock.py  test_solver_node.py  test_solver_paths.py
tests/unit/gui/: test_approval.py  test_pods.py  test_scenarios.py
