[project]
name = "k8s-debugger-agent"
version = "0.1.0"
description = "Routed Kubernetes incident triage and auto-remediation workflow"
requires-python = ">=3.11"
dependencies = [
    # Workflow
    "langgraph>=0.2",
    "langchain-core",
    # MCP (official Python SDK — research.md R5)
    "mcp",
    # Kubernetes client — used inside MCP tools only (never from agent process)
    "kubernetes",
    # Web layer
    "fastapi",
    "uvicorn[standard]",
    # Data validation + settings
    "pydantic>=2.0",
    "pydantic-settings",
    # LLM client — local OpenAI-compatible inference server (research.md R2)
    # langchain-openai wraps openai SDK, provides .with_structured_output()
    "langchain-openai",
    "openai",
    # Persistence
    "sqlalchemy>=2.0",
    "asyncpg",      # Postgres driver (prod)
    "aiosqlite",    # SQLite driver (dev/CI)
    # Observability
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "asgi-lifespan>=2.1.0",
]

[dependency-groups]
dev = [
    # Test runner
    "pytest>=8.0",
    "pytest-asyncio",
    "respx",          # HTTPX mock for contract tests
    "deepeval",       # LLM eval runner (Router + Expert quality)
    "httpx",          # async HTTP client used by respx / fastapi TestClient
    # Linting / formatting
    "ruff",
    "black",
    # Type checking
    "mypy",
    # Coverage
    "coverage[toml]",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all three sub-packages from the src/ layout
packages = ["src/agent", "src/mcp_server", "src/shared"]

# ---------------------------------------------------------------------------
# ruff — linting + import sorting (T003)
# Cyclomatic complexity cap of 15 per Principle VI / plan.md §Constitution
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "BLE", # flake8-blind-except
    "PT",  # flake8-pytest-style
]
ignore = [
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "S101",   # assert in tests is fine
]

[tool.ruff.lint.mccabe]
# Cyclomatic complexity cap = 15 (Principle VI)
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

# ---------------------------------------------------------------------------
# black — code formatting (T003)
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py311"]
line-length = 100

# ---------------------------------------------------------------------------
# mypy — strict type checking (T004)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true

# Relax strict rules in test/eval/perf directories per T004 override
[[tool.mypy.overrides]]
module = "tests.*"
strict = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deepeval.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — test runner (T005)
# Coverage floors: 85% pure logic, 95% safety-critical (plan.md Principle VII)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: fast, no IO",
    "contract: recorded fixtures only",
    "integration: requires live services (kind cluster, Postgres)",
    "eval: LLM quality evaluation",
    "perf: latency / cost benchmarks",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "deploy/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Overall project floor — individual safety-critical modules are gated in CI
fail_under = 0   # CI workflow enforces per-module floors (T006)
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
